--- a/security.html
+++ b/security.html
@@ -39,15 +39,19 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qb59Vfw4&k=Job&j=o7Qrbfwj&__jvst=Employee+Referral&__jvsd=suXs5iwL&__jvsc=Twitter&bid=nF4apMwz'>Infoblox Careers - Cyber Security Engineer</a></h5> 
+<h5><a href='https://frb.referrals.selectminds.com/jobs/sr-security-systems-analyst-10333'>Sr. Security Systems Analyst - The Federal Reserve System Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qb59Vfw4&k=Job&j=o7Qrbfwj&__jvst=Employee+Referral&__jvsd=suXs5iwL&__jvsc=Twitter&bid=nF4apMwz'>Infoblox Careers - Cyber Security Engineer</a></h5> 
+<p><span class="badge badge-light">Burnaby</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
 <h5><a href='https://www.okta.com/company/careers/security/security-analyst-assurance-1919954/?gh_src=82a8057f1'>Security Analyst, Assurance | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/security/enterprise-security-engineer-staff-principal-1307207/?gh_src=82a8057f1'>Enterprise Security Engineer (Staff/Principal) | Okta</a></h5> 
+<h5><a href='https://www.okta.com/company/careers/security/enterprise-security-engineer-staff-principal-1307207/?gh_src=82a8057f1'>Enterprise Security Engineer (Staff/Principal) | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -71,7 +75,7 @@
 <p><span class="badge badge-light">Melbourne, Victoria, Australia</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/tri-ad/4f991877-0a5a-4217-b989-6bbb505f2656'>TRI-AD, Inc - Application Security Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/tri-ad/4f991877-0a5a-4217-b989-6bbb505f2656'>TRI-AD, Inc - Application Security Engineer</a></h5> 
 <p><span class="badge badge-light">Tokyo</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -99,7 +103,7 @@
 <p><span class="badge badge-light">Boston, Massachusetts  New York, New York</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJEaVfwc&k=Job&j=oi26afwk&__jvst=Employee&__jvsd=swgOAhwW&__jvsc=Twitter&bid=nA1zoMwP'>Herjavec Group Careers - Senior Security Engineer, Splunk</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJEaVfwc&k=Job&j=oi26afwk&__jvst=Employee&__jvsd=swgOAhwW&__jvsc=Twitter&bid=nA1zoMwP'>Herjavec Group Careers - Senior Security Engineer, Splunk</a></h5> 
 <p><span class="badge badge-light">Toronto, Ontario</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -140,7 +144,7 @@ to be ?baked in? to a system architecture, but you actually know how to bake it 
 <p><span class="badge badge-light">D?sseldorf, Germany</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/MindPointGroupLLC/743999698281929-security-engineer'>MindPoint Group, LLC Security Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/MindPointGroupLLC/743999698281929-security-engineer'>MindPoint Group, LLC Security Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -228,11 +232,11 @@ to be ?baked in? to a system architecture, but you actually know how to bake it 
 <p><span class="badge badge-light">Portland, OR</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://www.theladders.com/job/40967470'>SR. ISeries Security Engineer - Virtual / Travel - Advantage Resourcing | Ladders</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.theladders.com/job/40967470'>SR. ISeries Security Engineer - Virtual / Travel - Advantage Resourcing | Ladders</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/xorsecurity/jobs/4497734002'>Job Application for Mid Cyber Security Engineer at XOR Security</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/xorsecurity/jobs/4497734002'>Job Application for Mid Cyber Security Engineer at XOR Security</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -254,7 +258,7 @@ vida de milhares de usu?rios. Acreditamos em ambientes ?geis,?...</p>
 <p><span class="badge badge-light">Lviv, Ukraine</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/vgs/af76e96c-857b-46d0-9677-563e793913f1'>Very Good Security - Senior Backend Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/vgs/af76e96c-857b-46d0-9677-563e793913f1'>Very Good Security - Senior Backend Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -318,7 +322,7 @@ vida de milhares de usu?rios. Acreditamos em ambientes ?geis,?...</p>
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://adjust.join.com/jobs/465543-information-security-analyst'>Job @ Adjust (Berlin): Information Security Analyst | JOIN</a></h5> 
+<h5><a href='https://adjust.join.com/jobs/465543-information-security-analyst'>Job @ Adjust (Berlin): Information Security Analyst | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -443,10 +447,6 @@ vida de milhares de usu?rios. Acreditamos em ambientes ?geis,?...</p>
 <h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oqyQafwI&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=nogqlMwG'>ServiceNow Careers - Security Analyst (US Federal Incident Response)</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA, USA</span></p>
 <p>Posted on:: 2019-10-27</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/binance/2714fb7e-6acd-4984-8776-c9e833c51c0e'>Binance - Security Engineer - SOC/Security Operations Center (Malta)</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-27</p>
 <hr/>
 
 
